--- a/AppPenjualan/App.config
+++ b/AppPenjualan/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="AppPenjualan.My.MySettings.ConnectionString" connectionString="Dsn=aplikasi_penjualan"
+            providerName="System.Data.Odbc" />
+    </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
